--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.12.1",
     "morgan": "~1.9.1",
     "passport": "^0.4.1",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "unirest": "^0.6.0"
   }
 }
